--- a/music/templates/music/registration_form.html
+++ b/music/templates/music/registration_form.html
@@ -1,6 +1,6 @@
 {% extends "music/base.html" %}
 {% block title %}Register{% endblock %}
-{% block signup_status %}active{% endblock %}
+{% block signin_status %}active{% endblock %}
 
 {% block body %}
 <div class="container mt-5" style="font-family: 'Raleway', sans-serif; font-size: 1.3em;">
