--- a/music/templates/music/songView.html
+++ b/music/templates/music/songView.html
@@ -12,11 +12,7 @@
                 <td>{{ song.song_title }}</td>  
                 <td>
                     <button class="btn btn-primary mr-2"><a href="{% url 'music:detail' song.album.pk %}">View Details</a></button>
-                    <form action="{% url 'music:song-delete' song.pk %}" method="post" style="display: inline;">
-                        {% csrf_token %}
-                        <input type="hidden" name="song_id" value="{{ song.id }}"/>
-                        <button class="btn btn-md btn-danger" type="submit"><i class="fa fa-trash-o"></i></a></button>
-                    </form>
+                    {% block songDel %}{% endblock %}
                 </td>
             </tr>
         {% endfor %}
