--- a/music/templates/music/index.html
+++ b/music/templates/music/index.html
@@ -24,12 +24,8 @@
             </div>
             <div class="card-footer">
                 <a href="{% url 'music:detail' album.pk %}"><button class="btn btn-primary">View Details</button></a>
-                <form action="{% url 'music:album-delete' album.pk %}" method="post" style="display: inline;">
-                    {% csrf_token %}
-                    <input type="hidden" name="album_id" value="{{ album.id }}"/>
-                    <button class="btn btn-sm btn-danger" type="submit"><i class="fa fa-trash-o"></i></a></button>
-                </form>
-                <a href="{% url 'music:album-update' album.pk %}"><button class="btn btn-sm btn-warning"><i class="fa fa-edit"></i></button></a>
+                {% block albumEdit %}{% endblock %}
+                {% block albumDelete %}{% endblock %}
             </div>
         </div>
     </div>
